# asset_keeper

./: .gitignore  Cargo.toml  readme.md
src/: data.rs  main.rs
src/stores/: asset_store.rs  file_store.rs  image_store.rs  mod.rs  traits.rs
tests/files/swords_sources/: square_crossed.xcf  tall.xcf  wide.xcf
