[package]
name = "asset_keeper"
version = "0.1.0"
authors = ["Wybe <wybe@ruurdwestra.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"

[dev-dependencies]
# A list of strings that are known to cause problems in code.
naughty-strings = "0.2.3"
# For doing filesystem interactions without messing with permanent files.
tempfile = "*"